--- a/index.ipynb
+++ b/index.ipynb
@@ -34,10 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "neighbors = [{'name': 'Fred', 'avenue': 4, 'street': 8}, {'name': 'Suzie', 'avenue': 1, 'street': 11}, \n",
@@ -54,21 +52,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "fred = neighbors[0]\n",
@@ -84,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +123,8 @@
           "Steven",
           "Natalie"
          ],
+         "type": "scatter",
+         "uid": "d2901c16-181c-11e9-85e4-cff847a799eb",
          "x": [
           4,
           1,
@@ -141,10 +153,10 @@
        }
       },
       "text/html": [
-       "<div id=\"c2ae1a93-1edf-402b-80cc-67157c7f1697\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c2ae1a93-1edf-402b-80cc-67157c7f1697\", [{\"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"text\": [\"Fred\", \"Suzie\", \"Bob\", \"Edgar\", \"Steven\", \"Natalie\"], \"mode\": \"markers\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"59b9ca16-57b9-4643-892a-d7482c63ef0b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"59b9ca16-57b9-4643-892a-d7482c63ef0b\", [{\"mode\": \"markers\", \"text\": [\"Fred\", \"Suzie\", \"Bob\", \"Edgar\", \"Steven\", \"Natalie\"], \"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"d2b7752c-181c-11e9-85e4-cff847a799eb\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"c2ae1a93-1edf-402b-80cc-67157c7f1697\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c2ae1a93-1edf-402b-80cc-67157c7f1697\", [{\"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"text\": [\"Fred\", \"Suzie\", \"Bob\", \"Edgar\", \"Steven\", \"Natalie\"], \"mode\": \"markers\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"59b9ca16-57b9-4643-892a-d7482c63ef0b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"59b9ca16-57b9-4643-892a-d7482c63ef0b\", [{\"mode\": \"markers\", \"text\": [\"Fred\", \"Suzie\", \"Bob\", \"Edgar\", \"Steven\", \"Natalie\"], \"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"d2b7752c-181c-11e9-85e4-cff847a799eb\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -192,14 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return first_neighbor['street'] - second_neighbor['street']"
    ]
   },
   {
@@ -211,11 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "street_distance(fred, natalie) # 4"
    ]
@@ -229,23 +248,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return abs(first_neighbor['avenue'] - second_neighbor['avenue'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avenue_distance(fred, natalie) #  1"
    ]
@@ -266,23 +292,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    dstreet = first_neighbor['street'] - second_neighbor['street']\n",
+    "    davenue = first_neighbor['avenue'] - second_neighbor['avenue']\n",
+    "    hypotenuse_sq = (dstreet ** 2)+(davenue ** 2)\n",
+    "    return hypotenuse_sq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors_squared(fred, natalie) # 17"
    ]
@@ -303,24 +339,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    dstreet = first_neighbor['street'] - second_neighbor['street']\n",
+    "    davenue = first_neighbor['avenue'] - second_neighbor['avenue']\n",
+    "    distance = math.sqrt((dstreet ** 2)+(davenue ** 2))\n",
+    "    return distance\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.123105625617661"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance(fred, natalie) # 4.123105625617661"
    ]
@@ -350,11 +397,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0,\n",
+       " 4.242640687119285,\n",
+       " 1.0,\n",
+       " 5.385164807134504,\n",
+       " 2.23606797749979,\n",
+       " 4.123105625617661]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distances = []\n",
     "for neighbor in neighbors:\n",
@@ -375,24 +436,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    second_neighbor['distance'] = distance(first_neighbor, second_neighbor)\n",
+    "    return second_neighbor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_with_neighbor(fred, natalie)\n",
     "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
@@ -407,23 +476,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    pass"
+    "    distance_from_first = []\n",
+    "    for neighbor in neighbors:\n",
+    "        if not neighbor == first_neighbor:\n",
+    "            distance_from_first.append(distance_with_neighbor(first_neighbor, neighbor))\n",
+    "    return distance_from_first"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_all(fred, neighbors)\n",
     "\n",
@@ -443,22 +527,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    pass"
+    "def nearest_neighbors(first_neighbor, neighbors, number):\n",
+    "    distance_from_first = distance_all(first_neighbor, neighbors)        \n",
+    "    return sorted(distance_from_first, key=[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
@@ -499,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
