--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
-    "    def GetItem()\n",
+    "    def getKey()\n",
     "    distance_from_first = distance_all(first_neighbor, neighbors)        \n",
     "    return sorted(distance_from_first, key=[-1])"
    ]
