--- a/index.ipynb
+++ b/index.ipynb
@@ -533,9 +533,9 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
     "    def getKey(item):\n",
-    "        return item[]\n",
+    "        return item[-1]\n",
     "    distance_from_first = distance_all(first_neighbor, neighbors)        \n",
-    "    return sorted(distance_from_first, key=[-1])"
+    "    return sorted(distance_from_first, key=)"
    ]
   },
   {
