Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -533,7 +533,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
     "    def getKey(item):\n",
-    "        return item[-1]\n",
+    "        return item[]\n",
     "    distance_from_first = distance_all(first_neighbor, neighbors)        \n",
     "    return sorted(distance_from_first, key=getKey)"
    ]
