--- a/index.ipynb
+++ b/index.ipynb
@@ -535,7 +535,7 @@
     "    def getKey(item):\n",
     "        return item[0]\n",
     "    distance_from_first = distance_all(first_neighbor, neighbors)        \n",
-    "    return sorted(distance_from_first, key=lambda )"
+    "    return sorted(distance_from_first, key=lambda neighbors)"
    ]
   },
   {
