--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number):\n",
-    "    number = \n",
+    "    number = number or len(neighbor)\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)        \n",
     "    sorted_neighbors = sorted(distance_from_first, key=lambda neighbor: neighbor['distance'])"
    ]
