--- a/index.ipynb
+++ b/index.ipynb
@@ -535,7 +535,7 @@
     "    number = number or len(neighbors) - 1\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)        \n",
     "    sorted_neighbors = sorted(distance_from_first, key=lambda neighbor: neighbor['distance'])\n",
-    "    return "
+    "    return sorted_neighbors"
    ]
   },
   {
